Prepare backend daemon interface.

--- a/etc/sonos.conf
+++ b/etc/sonos.conf
@@ -29,7 +29,9 @@
 #$conf{'logfile'} = '/var/log/sonos-cli/sonos-backend.log';
 
 # running directory (PID file etc.)
-$conf{'rundir'} = '/var/run/sonos-cli/';
+$conf{'rundir'} = '/var/run/sonos-cli';
 
+# client pipe
+$conf{'pipe'} = "$conf{rundir}/pipe/daemon";
 
 1;
